// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuiPlugins tools filter android + US as expected 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "phony",
    "title": "Credit card",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "wire",
      "hack",
    ],
    "pluginId": "gox",
    "title": "Wire transfer",
  },
]
`;

exports[`GuiPlugins tools filter ios + JP as expected 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "wire",
      "hack",
    ],
    "pluginId": "gox",
    "title": "Nice lawsuit",
  },
]
`;

exports[`GuiPlugins tools filter ios + US - gox as expected 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "/applePay",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "applepay",
    ],
    "pluginId": "phony",
    "title": "Apple Pay",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "phony",
    "title": "Credit card",
  },
]
`;

exports[`GuiPlugins tools filter ios + US as expected 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "/applePay",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "applepay",
    ],
    "pluginId": "phony",
    "title": "Apple Pay",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "wire",
      "hack",
    ],
    "pluginId": "gox",
    "title": "Wire transfer",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "phony",
    "title": "Credit card",
  },
]
`;

exports[`Production plugin data Buy plugins match snapshot on android + IL 1`] = `
[
  {
    "cryptoCodes": [
      "BTC",
      "ETH",
    ],
    "deepPath": "/order/buy",
    "deepQuery": {
      "order_id": "null",
      "page": "0",
    },
    "description": "Fee: 5.95%
Settlement: 1 - 48 hours",
    "partnerIconPath": "bits-of-gold-logo-sm.png",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": [
      "bank",
    ],
    "pluginId": "bitsofgold",
    "title": "Israeli Bank Transfer",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: ~5%
Settlement: 5 min - 24 hours",
    "paymentType": "paypal",
    "paymentTypeLogoKey": "paypal",
    "paymentTypes": [
      "paypal",
    ],
    "pluginId": "paypal",
    "title": "Paypal",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 5-7%
Settlement: 10 - 30 minutes",
    "paymentType": "googlepay",
    "paymentTypeLogoKey": "googlepay",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "creditcard",
    "title": "Google Pay",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 5-7%
Settlement: 10 - 30 minutes",
    "paymentType": "credit",
    "paymentTypeLogoKey": "credit",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "creditcard",
    "title": "Credit and Debit Card",
  },
]
`;

exports[`Production plugin data Buy plugins match snapshot on iOS + US 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: ~2%
Settlement: ~5 minutes
Limit $1000",
    "paymentType": "iach",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": [
      "iach",
    ],
    "pluginId": "iach",
    "title": "Instant ACH Bank Transfer",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: ~5%
Settlement: 5 min - 24 hours",
    "paymentType": "paypal",
    "paymentTypeLogoKey": "paypal",
    "paymentTypes": [
      "paypal",
    ],
    "pluginId": "paypal",
    "title": "Paypal",
  },
  {
    "cryptoCodes": [],
    "customTitleKey": "applepay",
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 5-7%
Settlement: 10 - 30 minutes",
    "paymentType": "applepay",
    "paymentTypeLogoKey": "applepay",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "creditcard",
    "title": "",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 5-7%
Settlement: 10 - 30 minutes",
    "paymentType": "credit",
    "paymentTypeLogoKey": "credit",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "creditcard",
    "title": "Credit and Debit Card",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: ~5%
Settlement: 5 min - 24 hours",
    "paymentType": "revolut",
    "paymentTypeLogoKey": "revolut",
    "paymentTypes": [
      "revolut",
    ],
    "pluginId": "revolut",
    "title": "Revolut",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: ~2%
Settlement: ~5 minutes
Limit $10000",
    "paymentType": "wire",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": [
      "wire",
    ],
    "pluginId": "wire",
    "title": "Bank Wire Transfer",
  },
  {
    "cryptoCodes": [
      "BTC",
    ],
    "deepPath": "/",
    "deepQuery": {},
    "description": "Fee: 3-8%
Settlement: Instant",
    "partnerIconPath": "libertyXlogo.png",
    "paymentTypeLogoKey": "cash",
    "paymentTypes": [
      "cash",
      "credit",
    ],
    "pluginId": "libertyx",
    "title": "In-person Cash and Debit Card",
  },
]
`;

exports[`Production plugin data Sell plugins match snapshot on iOS + US 1`] = `
[
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 1.5%
Settlement: 2 - 3 days",
    "paymentType": "ach",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": [
      "ach",
    ],
    "pluginId": "ach",
    "title": "ACH Bank Transfer",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: ~5%
Settlement: 5 min - 24 hours",
    "paymentType": "paypal",
    "paymentTypeLogoKey": "paypal",
    "paymentTypes": [
      "paypal",
    ],
    "pluginId": "paypal",
    "title": "Paypal",
  },
  {
    "cryptoCodes": [],
    "deepPath": "",
    "deepQuery": {},
    "description": "Fee: 4.0%
Settlement: 5 min - 24 hours",
    "paymentType": "credit",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": [
      "credit",
    ],
    "pluginId": "debit",
    "title": "Bank Transfer via Debit Card",
  },
  {
    "cryptoCodes": [
      "BTC",
      "DASH",
      "DOGE",
      "ETH",
      "LTC",
    ],
    "deepPath": "",
    "deepQuery": {},
    "description": "Buy gift cards and reload phones with crypto",
    "partnerIconPath": "bitrefill-2.png",
    "paymentTypeLogoKey": "giftcard",
    "paymentTypes": [
      "giftcard",
    ],
    "pluginId": "bitrefill",
    "title": "Gift Cards",
  },
]
`;
